--- a/ZX-Community/Base.lproj/Main.storyboard
+++ b/ZX-Community/Base.lproj/Main.storyboard
@@ -15,13 +15,71 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VIG-cb-h6y">
+                                <rect key="frame" x="183" y="331.5" width="48" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Jun"/>
+                                <connections>
+                                    <segue destination="gEM-0w-gFu" kind="presentation" modalPresentationStyle="overFullScreen" modalTransitionStyle="crossDissolve" id="EsV-wN-Q5R"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c5m-4R-lAL">
+                                <rect key="frame" x="179.5" y="533.5" width="55" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Leah"/>
+                                <connections>
+                                    <segue destination="ZIN-bq-NIa" kind="presentation" modalPresentationStyle="overFullScreen" modalTransitionStyle="crossDissolve" id="GdH-wy-qz9"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aH4-EX-3Ps">
+                                <rect key="frame" x="182.5" y="432.5" width="49" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Eric"/>
+                                <connections>
+                                    <segue destination="qXg-EA-u8B" kind="presentation" modalPresentationStyle="overFullScreen" modalTransitionStyle="crossDissolve" id="6v0-vV-H6C"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="c5m-4R-lAL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LhU-rf-Qsd"/>
+                            <constraint firstItem="VIG-cb-h6y" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YXB-N9-Jdk"/>
+                            <constraint firstItem="aH4-EX-3Ps" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="htX-a1-Shl"/>
+                            <constraint firstItem="aH4-EX-3Ps" firstAttribute="top" secondItem="VIG-cb-h6y" secondAttribute="bottom" constant="70" id="ma8-OT-08u"/>
+                            <constraint firstItem="c5m-4R-lAL" firstAttribute="top" secondItem="aH4-EX-3Ps" secondAttribute="bottom" constant="70" id="qJO-RZ-FjW"/>
+                            <constraint firstItem="aH4-EX-3Ps" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="tHr-ZR-dcy"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="30" y="67"/>
+        </scene>
+        <!--Jun-->
+        <scene sceneID="DEW-lf-ex7">
+            <objects>
+                <viewControllerPlaceholder storyboardIdentifier="Jun" storyboardName="Jun" referencedIdentifier="Jun" id="gEM-0w-gFu" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KFO-7X-0WZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="643" y="-56"/>
+        </scene>
+        <!--Eric-->
+        <scene sceneID="A6s-gS-foW">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Eric" referencedIdentifier="Eric" id="qXg-EA-u8B" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vA2-KY-23O" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="643" y="67"/>
+        </scene>
+        <!--Leah-->
+        <scene sceneID="fHU-0y-Aqy">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Leah" referencedIdentifier="Leah" id="ZIN-bq-NIa" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZC5-0J-7dW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="643" y="187"/>
         </scene>
     </scenes>
     <resources>
